# Weather-forecast

./: CMakeLists.txt  README.md  config.json
lib/: CMakeLists.txt  controller.cpp  view.cpp  weather.h
